<resources>
    <string name="app_name">Housecure</string>
    <string name="package_name">com.pbd.housecure.housecure</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_add_device">Add Device</string>
    <string name="setting_sensors">Sensors</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_emergency">Emergency call number</string>
    <string name="pref_notifications_summary">Show notifications from Housecure</string>
    <string name="pref_sensors_summary">Activate sensors for Housecure services</string>
    <string name="pref_sensors_key">pref_sensors</string>
    <string name="pref_emergency_key">pref_emergency</string>
    <string name="pref_notifications_key">pref_notifications</string>
    <string name="pref_emergency_default_value">911</string>
    <string name="firebase_web_client_id">700785978933-itnm6l8a6ka0dv86mpmgun8t7et606b9.apps.googleusercontent.com</string>
    <string name="nav_logout">Logout</string>
    <string name="default_notification_channel_id">HOUSECURE_CHANNEL_ID</string>
    <string name="fcm_message">Intruder Alert!</string>
    <string name="api_host">http://103.25.58.141:17617</string>
    <string name="safe_text">No Intruder Detected</string>
    <string name="alert_text">Intruder Alert</string>
    <string name="search_text">Search text</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Room">Room</string>
    <string name="DeviceID">DeviceID</string>
    <string name="Add">Add</string>
    <string name="pref_location_key">pref_location</string>
    <string name="pref_location_summary">Set your house location via GPS</string>
    <string name="setting_location">Set house location</string>
    <string name="openMap">Open Map</string>
</resources>
