<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_sensors_key"
        android:title="@string/setting_sensors"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_sensors_summary"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_notifications_key"
        android:title="@string/setting_notifications"
        app:iconSpaceReserved="false"
        android:summary="@string/pref_notifications_summary"/>

    <EditTextPreference
        android:key="@string/pref_emergency_key"
        android:title="@string/setting_emergency"
        android:defaultValue="@string/pref_emergency_default_value"
        android:dialogLayout="@layout/pref_dialog_edittext"
        android:inputType="number"
        android:digits="0123456789"
        app:iconSpaceReserved="false"/>

</PreferenceScreen>