<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDeviceFragment"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical"
            android:text="@string/Room"
            android:fontFamily="@font/raleway"/>
        <EditText
            android:id="@+id/room"
            android:padding="5dp"
            android:layout_width="0px"
            android:layout_weight="2"
            android:ellipsize="start"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/border"
            android:textColor="#ffffff"
            android:fontFamily="@font/raleway" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"

            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:layout_weight="1.5"
            android:text="@string/DeviceID"
            android:fontFamily="@font/raleway"/>
        <EditText
            android:id="@+id/device_id"
            android:padding="5dp"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="start"
            android:background="@drawable/border"
            android:textColor="#ffffff"
            android:fontFamily="@font/raleway"/>
    </LinearLayout>
    <Button
        android:id="@+id/add"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Add"
        android:textColor="@color/colorAccent"
        android:background="@drawable/border"/>

</LinearLayout>